[tool.poetry]
name = "pysparktestingexample"
version = "0.1.0"
description = ""
authors = ["MrPowers <matthewkevinpowers@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyspark = "^2.4.6"
quinn = "^0.8.0"
pandas = "^1.0.5"
farsante = "^0.1.0"
pyarrow = "^1.0.1"
jupyter = "^1.0.0"
ipykernel = "^5.3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
chispa = "^0.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
