[tool.poetry]
name = "pysparktestingexample"
version = "0.1.0"
description = ""
authors = ["MrPowers <matthewkevinpowers@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pyspark = ">2"
quinn = "^0.8.0"
pandas = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7"
chispa = "0.9.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
